--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Parham Zilouchian Moghaddam</span>
+                <span class="d-block d-lg-none">Shaghayegh Mahmoudi </span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -69,8 +69,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Parham
-                        <span class="text-primary">Zilouchian</span>
+                        Shaghayegh
+                        <span class="text-primary">Mahmoudi</span>
                     </h1>
 
                     <div class="subheading mb-5">
