--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
                         <a href="https://ece.ut.ac.ir/en/ece">School of Electrical and Computer Engineering</a>, 
                         <a href="https://ut.ac.ir/en">University of Tehran</a>, Tehran, Iran <p>·<i class="fas fa-mobile-alt"></i> (+98) 998-123-0333 ·</p>
                     <!-- </br>  -->
-                    <a href="mailto:p.zilouchian@ut.ac.ir"><i class="far fa-envelope"></i> p.zilouchian@ut.ac.ir</a>
                     <!-- <b>   .   </b> -->
                     </br>
-                    <a href="mailto:p.zilouchian@gmail.com"><i class="far fa-envelope"></i> p.zilouchian@gmail.com</a>
+                    <a href="shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> p.zilouchian@gmail.com</a>
                     <!-- <div class="subheading mb-5">
                         3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                         <a href="mailto:p.zilouchian@gmail.com">p.zilouchian@gmail.com</a> -->
