--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
                     </br>
-                    <a href="shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> p.zilouchian@gmail.com</a>
+                    <a href="shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
                     <!-- <div class="subheading mb-5">
                         3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                         <a href="mailto:p.zilouchian@gmail.com">p.zilouchian@gmail.com</a> -->
