--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     <div class="subheading mb-5">
                         <a href="https://ece.ut.ac.ir/en/ece">School of Electrical and Computer Engineering</a>, 
-                        <a href="https://ut.ac.ir/en">University of Tehran</a>, Tehran, Iran <p>·<i class="fas fa-mobile-alt"></i> (+98) 933-798-6217 ·</p>
+                        <a href="https://ut.ac.ir/en">University of Tehran</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
                     <a href="shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
