--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     </h1>
 
                     <div class="subheading mb-5">
-                        <a href="https://ece.ut.ac.ir/en/ece">School of Electrical and Computer Engineering</a>, 
-                        <a href="https://ut.ac.ir/en">University of Tehran</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
+                        <a href="https://ece.ut.ac.ir/en/ece">Department of Cell and Molecular Biology </a>, 
+                        <a href="https://ut.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
                     <a href="shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
@@ -118,15 +118,11 @@
                     <!-- <h2 class="mb-5">Education</h2> -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><i class="fa fa-university"></i> University of Tehran</h3>
-                            <div class="subheading mb-3"><a href="https://ece.ut.ac.ir/en">School of Electrical and Computer Engineering</a></br>Master of Science</div>
+                            <h3 class="mb-0"><i class="fa fa-university"></i> University of Science and Culture</h3>
+                            <div class="subheading mb-3"><a href="https://ece.ut.ac.ir/en">Department of Cell and Molecular Biology</a></br>Bachelor of Science</div>
                             <!-- <div class="subheading mb-3">Master of Science</div> -->
-                            <div><i class="fas fa-graduation-cap"></i> Computer Engineering - Computer Architecture</div>
-                            <div><i class="fa fa-paperclip"></i> Thesis: Design a low complexity Generative Model.</div>
-		                    <div><i class="far fa-user-circle"></i> Supervisor: <a href = "https://ece.ut.ac.ir/en/~modarressi"><b> Dr. Mehdi Modarressi</b></a></div>
-                            <div><i class="fas fa-user-circle"></i> Advisor: <a href = "https://ece.ut.ac.ir/en/~asadeghi"><b>Dr. MohamadAmin Sadeghi</b></a></div>
-			                <div><i class="fa fa-globe"></i> Lab Webpage: <a href = "https://utnoc.ir/new/index.html"><b>utnoc.ir</b></a></div>
-			                    <p><i class="far fa-list-alt"></i> Current GPA: <b>19.18/20 (3.88/4)</b>
+                            <div><i class="fas fa-graduation-cap"></i> Cellular and Molecular Biology</div>
+			                    <p><i class="far fa-list-alt"></i> Current GPA: <b>19.40/20 (4/4)</b>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2019 - Present</span></div>
                     </div>
