--- a/index.html
+++ b/index.html
@@ -124,29 +124,17 @@
                             <div><i class="fas fa-graduation-cap"></i> Cellular and Molecular Biology</div>
 			                    <p><i class="far fa-list-alt"></i> Current GPA: <b>19.40/20 (4/4)</b>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2019 - Feb. 2023</span></div>
                     </div>
+
+
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><i class="fa fa-university"></i> University of Kashan</h3>
-                            <div class="subheading mb-3"><a href="https://kashanu.ac.ir/en">Department Of Electrical and Computer Engineering</a></br>Bachelor of Science</div>
-                                <div><i class="fas fa-graduation-cap"></i> Computer Engineering - Software Engineering</div>
-                                <div><i class="fa fa-paperclip"></i> Thesis: Deep learning based on support vector machine (SVM)</div>
-                                <div><i class="fas fa-user-circle"></i> Advisor: <a href="https://scholar.google.co.uk/citations?user=7ZCf1C8AAAAJ&hl=en"><b>Dr. Javad Salimi</b></a></div>
-                                <p><i class="far fa-list-alt"></i> GPA (last 2 years): <b>18.25/20 (3.96/4)</b>
-                            </br>
-                            <i class="fas fa-list-ul"></i> Cumulative GPA: <b>17.69/20 (3.81/4)</b></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2015 - Sep. 2019</span></div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"><i class="fas fa-school"></i> Dr. Ali Khayatzade High School</h3>
-                            <div class="subheading mb-3">Total High Quality School (TQS)</br>Diploma Degree</div>
-                            <p>Mathematics and Physics</p>
-                            <p>GPA: <b>19.44/20 (4/4)</b></p>
+                            <h3 class="mb-0"><i class="fas fa-school"></i> Tazkieh High School</h3>
+                            <div class="subheading mb-3">Diploma Degree</div>
+                            <p>Science</p>
+                            <p>GPA: <b>18.55/20 (4/4)</b></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2011 - Jun 2015</span></div>
                     </div>
