--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><i class="fas fa-school"></i> Tazkieh High School</h3>
                             <div class="subheading mb-3">Diploma Degree</div>
-                            <p>Science</p>
-                            <p>GPA: <b>18.55/20 (4/4)</b></p>
+                            <p><i class="fas fa-graduation-cap"></i> Science</p>
+                            <p><i class="far fa-list-alt"></i> GPA: <b>18.55/20 (4/4)</b></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2011 - Jun 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2018 - Jun 2019</span></div>
                     </div>
                 </div>
             </section>
