--- a/index.html
+++ b/index.html
@@ -96,13 +96,9 @@
                      </br></br></br>
                     
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/parhamzm/" title="Linkedin"><i class="fab fa-linkedin-in" title="Linkedin"></i></a>
-                        <a class="social-icon" href="https://github.com/parhamzm" title="Github"><i class="fab fa-github" title="Github"></i></a>
-                        <a class="social-icon" href="https://www.kaggle.com/parhamzm" title="Kaggle"><i class="fab fa-kaggle" title="Kaggle"></i></a>
-                        <a class="social-icon" href="https://twitter.com/p_zilouchian" title="Twitter"><i class="fab fa-twitter" title="Twitter"></i></a>
-                        <a class="social-icon" href="https://join.skype.com/invite/bOQdnE82TBug" title="Skype"><i class="fab fa-skype" title="Skype"></i></a>
-                        <a class="social-icon" href="https://www.slideshare.net/ParhamZilouchian?utm_campaign=profiletracking&utm_medium=sssite&utm_source=ssslideview" title="Slide Share"><i class="fab fa-slideshare" title="Slide Share"></i></a>
-                        <a class="social-icon" name="YouTube Channel" href="https://www.youtube.com/channel/UCtTyWx56HH1ZTKio1dAevKA" title="YouTube Channel"><i class="fab fa-youtube" title="YouTube Channel"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/shaghayegh-m/" title="Linkedin"><i class="fab fa-linkedin-in" title="Linkedin"></i></a>
+                        <a class="social-icon" href="https://join.skype.com/invite/ouqZcM9zao6j" title="Skype"><i class="fab fa-skype" title="Skype"></i></a>
+                        <a class="social-icon" href="https://www.slideshare.net/shaqayeqmahmoudi" title="Slide Share"><i class="fab fa-slideshare" title="Slide Share"></i></a>
                         
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
@@ -117,7 +113,7 @@
                     <!-- <h2 class="mb-5">Education</h2> -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><i class="fa fa-university"></i> University of Science and Culture</h3>
+                            <h3 class="mb-0"><i class="fa fa-university"></i> <a href="https://ece.ut.ac.ir/en"></a> University of Science and Culture</h3>
                             <div class="subheading mb-3"><a href="https://ece.ut.ac.ir/en">Department of Cell and Molecular Biology</a></br>Bachelor of Science</div>
                             <!-- <div class="subheading mb-3">Master of Science</div> -->
                             <div><i class="fas fa-graduation-cap"></i> Cellular and Molecular Biology</div>
