--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     <!-- <h2 class="mb-5">Education</h2> -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><i class="fa fa-university"></i>  <a href="https://ece.ut.ac.ir/en"></a>University of Science and Culture</h3>
-                            <div class="subheading mb-3"><a href="https://ece.ut.ac.ir/en">Department of Cell and Molecular Biology</a></br>Bachelor of Science</div>
+                            <h3 class="mb-0"><i class="fa fa-university"></i> University of Science and Culture</h3>
+                            <div class="subheading mb-3"><a href="">Department of Cell and Molecular Biology</a></br>Bachelor of Science</div>
                             <!-- <div class="subheading mb-3">Master of Science</div> -->
                             <div><i class="fas fa-graduation-cap"></i> Cellular and Molecular Biology</div>
 			                    <p><i class="far fa-list-alt"></i> Current GPA: <b>19.40/20 (4/4)</b>
