--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                     </h1>
 
                     <div class="subheading mb-5">
-                        <a href="https://ece.ut.ac.ir/en/ece">Department of Cell and Molecular Biology </a>, 
-                        <a href="https://ut.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
+                        <a href="https://ece.ut.ac.ir/en/ece">Department of Sciences and Advanced Technologies in Biology </a>, 
+                        <a href="http://usc.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
                     <a href="shaqayeqmhmoudi@gmail.com"><i class="far fa-envelope"></i> shaqayeqmhmoudi@gmail.com</a>
@@ -84,7 +84,7 @@
                         <a href="mailto:p.zilouchian@gmail.com">p.zilouchian@gmail.com</a> -->
                     </div>
                     <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
-                    <p class="lead mb-5">I received my B.Sc degree in Computer Software Engineering  from <a href="https://kashanu.ac.ir/en">Department of Electrical & Computer Engineering</a> at the <a href="https://kashanu.ac.ir/en">University of Kashan,</a> and started my M.Sc. studying at the <a href = "https://ut.ac.ir/en">University of Tehran</a>, majoring in Computer Architecture. 
+                    <p class="lead mb-5"> My academic journey began with a strong foundation in cellular and molecular biology, culminating in my Bachelor's degree from the University of Science and Culture.  I'm on a journey of exploration and discovery in the realm of neuroscience.     I received my B.Sc degree in Computer Software Engineering  from <a href="https://kashanu.ac.ir/en">Department of Electrical & Computer Engineering</a> at the <a href="https://kashanu.ac.ir/en">University of Kashan,</a> and started my M.Sc. studying at the <a href = "https://ut.ac.ir/en">University of Tehran</a>, majoring in Computer Architecture. 
 		   
                         My research interests are <b>Machine Learning</b>, <b>Deep Neural Networks</b>, <b>Computer Vision</b>, <b>GANs</b>, <b>Data Analysis</b>, and <b> Bio-Inspired Computing</b>. Right now I'm working on Developing of a <b>Neural Network and Deep Learning approach for video compression</b>, as my Master thesis.
                          <!-- I am mostly interested in <b>Robotics</b>, <b>Machine Learning</b>, and <b>Parallel Processing</b>.</p> -->
