--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </h1>
 
                     <div class="subheading mb-5">
-                        <a href="https://ece.ut.ac.ir/en/ece">Department of Sciences and Advanced Technologies in Biology </a>, 
+                        Department of Sciences and Advanced Technologies in Biology </a>, 
                         <a href="http://usc.ac.ir/en">University of Science and Culture</a>, Tehran, Iran <p> <i class="fas fa-mobile-alt"></i> (+98) 933-798-6217  </p>
                     <!-- </br>  -->
                     <!-- <b>   .   </b> -->
