--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience"><i class="fas fa-laptop-code"></i> Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills"><i class="fas fa-tools"></i> Skills</a></li>
 
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#teaching"><i class="fas fa-chalkboard-teacher"></i> Teaching Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#teaching"><i class="fas fa-chalkboard-teacher"></i> Academic Projects</a></li>
 
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshop"><i class="fas fa-place-of-worship"></i> Workshops</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects"><i class="fas fa-laptop-code"></i> Projects</a></li>
@@ -224,176 +224,67 @@
             <section class="resume-section" id="teaching">
             <hr class="m-0"></br>
             <div class="resume-section-content">
-                <h2><img src="assets/img/TeachingAssistantship_logo.jpeg" alt="teaching" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Teaching Experiences</b></h2>
+                <h2><img src="assets/img/TeachingAssistantship_logo.jpeg" alt="teaching" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Academic Projects</b></h2>
             <!-- <h3>Teaching Experiences </h3> -->
             </br>
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">• Teaching Assistant, University of Tehran</h3>
-                  <div class="subheading mb-3">Data Analysis (DA)</div>
-                  <p><i class="fas fa-arrow-circle-right"></i> This course is under the supervision of <a href="https://ece.ut.ac.ir/en/~asadeghi"><b>Dr. Mohammad Amin Sadeghi</b></a>. 
+                  <h3 class="mb-0">• Genetic Engineering</h3>
+                  <div class="subheading mb-3">In-course exercise</div>
+                  <p><i class="fas fa-arrow-circle-right"></i> Research on recombinant vaccines.</a>
                   </br>
-                  <i class="fas fa-pen-alt"></i> I am responsible for creating video and learning materials for this course. (you could find some of my videos on my <a href="https://www.youtube.com/channel/UCtTyWx56HH1ZTKio1dAevKA">Youtube Channel.</a>)
-                  <br>
-                  <i class="fa fa-check"></i> I am responsible for grading Quizes, Projects and Exams.
-                </br>
-                <i class="fas fa-check-circle"></i> I am responsible for designing Project number 4 about Database usage in Data Analytics.
-                </p>
+                  <i class="fas fa-arrow-circle-right"></i> Investigating methods of gene therapy and their efficiency for inherited disease and cancer.</a>
+                  </br>
                 </div>
                 <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
                 <!-- </div> -->
               </div>
 
-              <!-- <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Tehran</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Machine Learning (ML)</div>
-                  <p><i class="fa fa-check"></i> This course was under the supervision of <a href="https://ece.ut.ac.ir/en/~araabi"><b>Prof. Babak Nadjar Araabi</b></a> & <a href="https://ece.ut.ac.ir/en/~dehaqani"><b>Dr. Mohammadreza Abolghasemi Dehaqani</b></a>.
-                </br>
-                <i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                </div>
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
-              </div> -->
-
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Tehran</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Fault Tolerant (FT)</div>
-                  <p><i class="fas fa-check-square"></i> This course was under the supervision of <a href="https://ece.ut.ac.ir/en/~saeed"><b>Dr. Saeed Safari</b></a>.
-                </br>
-                <i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">• Radioactive Materials and their Effect on Biological Systems</h3>
+                  <div class="subheading mb-3">In-course exercise</div>
+                  <p><i class="fas fa-arrow-circle-right"></i> Research on ionizing radiation and their effects on human organs.</a>
+                  </br>
+                  <i class="fas fa-arrow-circle-right"></i> Studying radioactive food.</a>
+                  </br>
                 </div>
                 <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
                 <!-- </div> -->
               </div>
 
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Tehran</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Network on Chip (NOC)</div>
-                  <p><i class="fa fa-check"></i> This course was under the supervision of <a href="https://ece.ut.ac.ir/en/~modarressi"><b>Dr. Mehdi Modarressi</b></a>.
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">• Molecular Biology by Robert F. Weaver, 5th ed book</h3>
+                  <div class="subheading mb-3">Translation of the book to Persian</div>
+                  <p><i class="fas fa-arrow-circle-right"></i> participated in translating chapter 9 and 10.</a>
                   </br>
-                <i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
                 </div>
                 <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
+                <!-- </div> -->
+              </div>
+
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">• Molecular Medicine: Genomics to Personalized Healthcare by R. J. Trent, 4th ed book</h3>
+                  <div class="subheading mb-3">Translation of the book to Persian</div>
+                  <p><i class="fas fa-arrow-circle-right"></i> participated in translating chapter 3 and 4.</a>
+                  </br>
+                </div>
+                <!-- <div class="resume-date text-md-right"> -->
                 <!-- </div> -->
               </div>
 
 
-
-
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Kashan</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Discrete Mathematics (DM)</div>
-                  <p><i class="fas fa-chevron-circle-right"></i> This course was under the supervision of <a href="https://scholar.google.com/citations?user=7ahmLpgAAAAJ&hl=en"><b>Dr. Hossein Ebrahimpour-Komleh</b></a>.
+              <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                  <h3 class="mb-0">• Genetic Engineering</h3>
+                  <div class="subheading mb-3">In-course exercise</div>
+                  <p><i class="fas fa-arrow-circle-right"></i> Research on different covid-19 vaccines.</a>
                   </br>
-                  <i class="far fa-check-circle"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                  <i class="far fa-check-circle"></i> I am also responsible for holding classes.</p>
                 </div>
                 <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
-                <!-- </div> -->
-              </div>
-
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Kashan</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Artificial Intelligence (AI)</div>
-                  <p><i class="far fa-hand-point-right"></i> This course was under the supervision of <a href="https://scholar.google.com/citations?user=7ahmLpgAAAAJ&hl=en"><b>Dr. Hossein Ebrahimpour-Komleh</b></a>.
-                  </br>
-                  <i class="fas fa-chevron-circle-right"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                </div>
-                <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
-                <!-- </div> -->
-              </div>
-
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Kashan</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Computational Intelligence (CI)</div>
-                  <p><i class="fas fa-chevron-circle-right"></i> This course was under the supervision of <a href="https://scholar.google.co.uk/citations?user=7ZCf1C8AAAAJ&hl=en"><b>Dr. Javad Salimi</b></a>.
-                  </br>
-                  <i class="far fa-check-circle"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                </div>
-                <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
-                <!-- </div> -->
-              </div>
-
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Lab Instructor, University of Kashan</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Matlab Lab</div>
-                  <p><i class="far fa-hand-point-right"></i> This course was under the supervision of <a href="https://scholar.google.com/citations?user=7ahmLpgAAAAJ&hl=en"><b>Dr. Hossein Ebrahimpour-Komleh</b></a>.
-                  </br>
-                  <i class="fas fa-chevron-circle-right"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                </div>
-                <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Sep. 2021 - Now</span></div>
-                <!-- </div> -->
-              </div>
-
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Tehran</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Chip Multi Processor (CMP)</div>
-                  <p><i class="far fa-hand-point-right"></i> This course was under the supervision of <a href="https://ece.ut.ac.ir/en/~modarressi"><b>Dr. Mehdi Modarressi</b></a>.
-                  </br>
-                <i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                </div>
-                <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Feb. 2021 - Aug. 2021</span></div>
-                <!-- </div> -->
-              </div>
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Programming Teacher, Dr. Ali Khayatzade High School</h3>
-                  <div class="subheading mb-3 margin-right:0px;"><i class="fab fa-java"></i> Java Programming Language</div>
-                  <p><i class="far fa-hand-point-right"></i> This course was under my own supervision.
-                  </br>
-                <i class="fa fa-check"></i> I am responsible for teching Java Programming language to high school students and also designing and grading home works and exams.</p>
-                </div>
-                <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2017 - 2018</span></div>
-                <!-- </div> -->
-              </div>
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Kashan</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Algorithm Design (AD)</div>
-                  <p><i class="far fa-hand-point-right"></i> This course was under the supervision of <a href="https://scholar.google.co.uk/citations?user=7ZCf1C8AAAAJ&hl=en"><b>Dr. Javad Salimi</b></a>.
-                  </br>
-                <i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                </div>
-                <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2017</span></div>
-                <!-- </div> -->
-              </div>
-
-              <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
-                <div class="resume-content mr-auto margin-right:-10px;">
-                  <h3 class="mb-0">• Teaching Assistant, University of Kashan</h3>
-                  <div class="subheading mb-3 margin-right:0px;">Advanced Programming (AP)</div>
-                  <p><i class="far fa-hand-point-right"></i> This course was under the supervision of <a href="https://ece.ut.ac.ir/en/~modarressi"><b>Ahmand Yoosofan</b></a>.
-                  </br>
-                <i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p>
-                </div>
-                <!-- <div class="resume-date text-md-right"> -->
-                    <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> 2016</span></div>
                 <!-- </div> -->
               </div>
           </div>
