--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                       <div class="flex-grow-1">
                           <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://nbml.ir/en">National Brain Mapping Lab (NBML)</a></h3>
-                          <p><i class="fas fa-thumbtack"></i>  Checking EEG signals.</p>
-                          <p><i class="fas fa-thumbtack"></i>  Preparing subjects for EEG test(puting EEG cap, adjusting the eye tracker, etc.).</p>
-                          <p><i class="fas fa-thumbtack"></i>  Runnig cognitive test on subjects.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Prepared subjects for EEG sessions(electrode placement, impedance checking, and adjusting the eye tracker).</p>
+                          <p><i class="fas fa-thumbtack"></i>  Ensured data quality through meticulous artifact identification and rejection.</p>
+                          <p><i class="fas fa-thumbtack"></i>  Runned cognitive tests on subjects.</p>
                       </div>
                       <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Aug. 2023</span></div>
                   </div>
                   <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0"><i class="fas fa-laptop-code"></i>    Internship at <a href="https://skinstemcell.tums.ac.ir/">Skin and Stem Cell Research Center (SSRC)</a></h3>
-                        <p><i class="fas fa-thumbtack"></i>  Research on eye drops and tissue glues made by umbilical cord stem cells.</p>
-                        <p><i class="fas fa-thumbtack"></i>  Culturing stem cells.</p>
+                        <p><i class="fas fa-thumbtack"></i>  Researched on eye drops and tissue glues made by umbilical cord stem cells.</p>
+                        <p><i class="fas fa-thumbtack"></i>  Participated in the culturing of umbilical cord stem cells, adhering to strict protocols for maintaining cell viability and health.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. - Dec. 2022</span></div>
                 </div>
@@ -201,7 +201,7 @@
       <div class="resume-content mr-auto">
           <h3 class="mb-0"><i class="fa-solid fa-flask"></i>  Laboratory Techniques</h3>
       </br>
-          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, PCR, Primer Design, Buffer Preparation</p>
+          <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> PCR/qPCR, DNA/RNA Extraction, Recombinant DNA, Bacterial Culture, Western Blotting, Spectrophotometry, Gel Electrophoresis, Microarray, Primer Design, Buffer Preparation</p>
       </div>
   </div>
   
@@ -236,7 +236,7 @@
         </a></b></h3>
         <div class="subheading mb-3">In-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i>  Research on recombinant vaccines.</p>
-        <p><i class="fas fa-arrow-circle-right"></i>  Investigating methods of gene therapy and their efficiency for inherited disease and cancer.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Investigating methods of gene therapy and their efficiency for cancer and inherited disease.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
