--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
         <h3 class="mb-0"><b>• Genetic Engineering
         </a></b></h3>
         <div class="subheading mb-3">In-course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Research on recombinant vaccines.</p>
-        <p><i class="fas fa-arrow-circle-right"></i>  Investigating methods of gene therapy and their efficiency for cancer and inherited disease.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on recombinant vaccines.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Explored methods of gene therapy and assessed their efficiency for treating cancer and inherited diseases.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
@@ -249,11 +249,11 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• Radioactive Materials and their Effect on Biological Systems
+        <h3 class="mb-0"><b>• Radioactive Materials and their Effects on Biological Systems
         </a></b></h3>
         <div class="subheading mb-3">In-course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Research on ionizing radiation and their effects on human organs.</p>
-        <p><i class="fas fa-arrow-circle-right"></i>  Studying radioactive food.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on ionizing radiation and its effects on human organs.</p>
+        <p><i class="fas fa-arrow-circle-right"></i>  Researched ways to reduce radioactive effects on living things</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
@@ -295,7 +295,8 @@
         <h3 class="mb-0"><b>• Covid-19 Vaccines and their Mechanisms
         </a></b></h3>
         <div class="subheading mb-3">In-course exercise</div>
-        <p><i class="fas fa-arrow-circle-right"></i>  Research on different covid-19 vaccines.</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Studied the mechanisms underlying various Covid-19 vaccine platforms, including mRNA-based vaccines, viral vector vaccines, and protein subunit vaccines.</p>
+        <p><i class="fas fa-arrow-circle-right"></i> Gained insights into the stages of vaccine development, from preclinical research to regulatory approval and distribution.</p>
         <!-- </br> -->
         <!-- <p><i class="fa fa-check"></i> I am responsible for designing and grading homework, projects and exams.</p> -->
       </div>
