--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shaghayegh Mahmoudi - Personal Page</title>
+        <title>Shaqayeq Mahmoudi - Personal Page</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
 
         <!-- Bootstrap core CSS -->
@@ -60,7 +60,7 @@
 
                     
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards"><i class="fa fa-trophy"></i> Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certificate"><i class="fas fa-certificate"></i> Presentation</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certificate"><i class="fas fa-certificate"></i> Presentation</a></li> -->
 
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"><i class="fas fa-map-marked-alt"></i> Interests</a></li>
 
@@ -190,7 +190,7 @@
   <div class="resume-content mr-auto">
       <h3 class="mb-0"><i class="fas fa-desktop"></i>  Computer Skills</h3>
   </br>
-      <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> Microsoft Office(Excel, Word, PowerPoint), Mendeley, RStudio, SPSS, GeneRunner, TeXstudio, Visual Studio, L<sup>A</sup>T<sub>E</sub>X</span></p>
+      <p class="lead mb-5"> <i class="far fa-hand-point-right"></i> Microsoft Office(Excel, Word, PowerPoint), Mendeley, RStudio, SPSS, GeneRunner, L<sup>A</sup>T<sub>E</sub>X</span></p>
   </div>
   </div>
 
@@ -232,7 +232,7 @@
     <!-- <h2 class="mb-5">Academic Projects</h2> -->
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• Genetic Engineering
+        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/genetic-engineeringpptx-260412445">Genetic Engineering</a>
         </a></b></h3>
         <div class="subheading mb-3">In-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on recombinant vaccines.</p>
@@ -249,7 +249,7 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• Radioactive Materials and their Effects on Biological Systems
+        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/radioactive-matterialspptx">Radioactive Materials and their Effects on Biological Systems</a>
         </a></b></h3>
         <div class="subheading mb-3">In-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i>  Conducted research on ionizing radiation and its effects on human organs.</p>
@@ -292,7 +292,7 @@
 
     <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
-        <h3 class="mb-0"><b>• Covid-19 Vaccines and their Mechanisms
+        <h3 class="mb-0"><b>• <a href="https://www.slideshare.net/shaqayeqmahmoudi/covid19-vaccinespptx-260414830">Covid-19 Vaccines and their Mechanisms</a>
         </a></b></h3>
         <div class="subheading mb-3">In-course exercise</div>
         <p><i class="fas fa-arrow-circle-right"></i> Studied the mechanisms underlying various Covid-19 vaccine platforms, including mRNA-based vaccines, viral vector vaccines, and protein subunit vaccines.</p>
@@ -322,6 +322,7 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
                   <h3 class="mb-0">• B.Sc.</h3>
+                </br>
                   <p><i class="fas fa-arrow-circle-right"></i> Cellular and Molecular Biology 1 & 2 (20), Genetics (20), Molecular Genetics (20), Genetic Engineering (20), Virology (20), Evolutionary Biology (20), Metabolism Biochemistry (20), Bioinformatics (20), Biostatistics (19.75), Microbial Biology (19.5), Immunology (18.5), Histology (18), Nanobiotechnology (17.75)</a>. 
                   </br>
                 </p>
@@ -345,11 +346,11 @@
               <div class="resume-item d-flex flex-column flex-md-row mb-5 margin-right:0px;">
                 <div class="resume-content mr-auto margin-right:-10px;">
                   <h3 class="mb-0">• Online</h3>
-                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Data Analyst in R”</b> - Offered by Dataquest
-                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Basic, Clinical & Cognitive Neuroscience Diploma”</b> - Offered by Neurotract
-                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Fundamentals of Neuroscience Parts 1 & 2”</b> - Offered by edX
                 </br>
-                <i class="fas fa-arrow-circle-right"></i> <b>“Elementary Steps toward AI”</b> - Offered by Tehran University of Medical Science(TUMS)</p>
+                  <p><i class="fas fa-arrow-circle-right"></i> <b>“<a href="https://www.dataquest.io/">Data Analyst in R</a>”</b> - Offered by Dataquest</p>
+                  <p><i class="fas fa-arrow-circle-right"></i> <b>“Basic, Clinical & Cognitive Neuroscience Diploma”</b> - Offered by <a href="https://www.neurotract.com/">Neurotract</a>  <b>(<a href="https://drive.google.com/file/d/1sJ7pRZaWcefrvGmF_bsrgwAqpiRS-iMS/view?usp=drive_link">Certificate</a>)</b></p>
+                  <p><i class="fas fa-arrow-circle-right"></i> <b>“<a href="https://www.edx.org/">Fundamentals of Neuroscience Parts 1 & 2</a>”</b> - Offered by edX</p>
+                <i class="fas fa-arrow-circle-right"></i> <b>“Elementary Steps toward AI”</b> - Offered by <a href="http://en.tums.ac.ir/en">Tehran University of Medical Science(TUMS)</a>
                 </div>
           </div>
         </section> 
@@ -368,31 +369,26 @@
         </br>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">• Seminars</a></h3>
-            <p>It was a two-day virtual conference focused on bringing together a community of leaders, visionaries, practitioners, and researchers across industries. 
-              And the topics that had discussed were concentrating on getting the research and academic works about Artificial Intelligence and related issues into actual use and reality. 
-              The most exciting lecture for me was the lecture of <b><a href="https://www.linkedin.com/in/fei-fei-li-4541247/">Prof. Fei-Fei Li</a></b>, which was about the evolution that our planet has been through till now and how we could use this evolution in our new research areas, 
-              especially in the field of AI.</p>
-            <p>
-              And also lecture of <a href="https://www.linkedin.com/in/andrewyng/"><b>Prof. Andrew Ng</b></a> was very exciting, he discussed that how we can use
-              Deep Learning and Machine Learning techniques for Big Data and also Data Analytics.
-            </p>
+            <h3 class="mb-0"><b>• Seminars
+            </a></b></h3>
+          </br>
+            <p><i class="fas fa-arrow-circle-right"></i>  <b>“Second International and Forth National CRISPR Symposium”</b> - <a href="http://www.nigeb.ac.ir/web/en/home">NIGBE</a>  <b>(<a href="https://drive.google.com/file/d/1MTDKzTojaP8_pFDAoFAKYNV9bDF1Z5zE/view?usp=drive_link">Certificate</a>)</b></p>
+            <p><i class="fas fa-arrow-circle-right"></i>  <b>“Cryobiology in Organs and Sexual Samples”</b> - <a href="https://www.royan.org/en/">Royan International Education Center(RIEC)</a>  <b>(<a href="https://drive.google.com/file/d/1nWctG5_0Mmu2209-qIxrPwfD8M5i7EcU/view?usp=drive_link">Certificate</a>)</b></p>
+            <p><i class="fas fa-arrow-circle-right"></i>  <b> “mRNA Technology in Research and Medicine”</b> - <a href="https://biologyevents.ir/">Iranian Biologists Union</a>  <b>(<a href="https://drive.google.com/file/d/116M8TWNDlVTZUphycxs2R7VjzAzhy4ab/view?usp=drive_link">Certificate</a>)</b></p>
+            <p><i class="fas fa-arrow-circle-right"></i>  <b>“Microorganisms in Health and Disease”</b> - <a href="https://biologyevents.ir/">Union of Biology Students of Iran</a>  <b>(<a href="https://drive.google.com/file/d/1TAS8nRiT4cEFJ7atTVbxPLzLI6VgALM8/view?usp=drive_link">Certificate</a>)</b></p>
           </div>
-          <!-- <div class="resume-date text-md-right"> -->
-          <!-- </div> -->
         </div>
-
-
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">• Workshops</a></h3>
-            <p>The Institute for Research in Fundamental Sciences <a href="http://www.ipm.ac.ir/"><b>(IPM)</b></a> affiliated with the Ministry of Science, Research, and Technology, was founded in 1989 under the name of Institute for Studies in Theoretical Physics and Mathematics.
-              In the <a href ="http://cs.ipm.ac.ir/asoc2021/"><b>Third Advanced School of Computing</b></a>, experts working on computer architecture were invited to give lectures on various aspects of this influential and evolving branch of computer science. <a href="https://oergin.kasirgalabs.com/"><b>Prof. Oğuz Ergin</b></a> from TOBB University of Economics and Technology, 
-              <a href="https://people.inf.ethz.ch/omutlu/"><b>Prof. Onur Multu</b></a> from ETH Zurich, <a href="http://www.cs.bilkent.edu.tr/~ozturk/"><b>Prof. Ozcan Ozturk</b></a> from Bilkent University, and <a href="http://www.cse.iitd.ac.in/~srsarangi/"><b>Prof. Smruti Ranjan Saranji</b></a> from IIT Delhi were invited to have a talk on memory systems, coherence and consistency, on-chip-network, temperature and power management, and architecture for emerging workloads.</p>
+            <h3 class="mb-0"><b>• Workshops
+            </a></b></h3>
+          </br>
+          <p><i class="fas fa-arrow-circle-right"></i>  <b>“Vaccine and Vaccination, from Design to Administration”</b> - <a href="https://english.rvsri.ac.ir/portal/home/?239735/Home">Razi Vaccine & Serum Research</a>  <b>(<a href="https://drive.google.com/file/d/1jvYpjhyb6tZTFbCA3NStjG0w79EVpWWZ/view?usp=drive_link">Certificate</a>)</b></p>
+          <p><i class="fas fa-arrow-circle-right"></i>  <b>“Principles of Gene Editing and sgRNA Design Workshop”</b> - <a href="http://www.nigeb.ac.ir/web/en/home">NIGBE</a>  <b>(<a href="https://drive.google.com/file/d/1MTDKzTojaP8_pFDAoFAKYNV9bDF1Z5zE/view?usp=drive_link">Certificate</a>)</b></p>
+          <p><i class="fas fa-arrow-circle-right"></i>  <b> “DNA Extraction, PCR, and DNA Paternity Test”</b> - <a href="https://atiehgene.ir/">Atieh Negar Gene Alborz</a>  <b>(<a href="https://drive.google.com/file/d/1jvYpjhyb6tZTFbCA3NStjG0w79EVpWWZ/view?usp=drive_link">Certificate</a>)</b></p>
+          <p><i class="fas fa-arrow-circle-right"></i>  <b>“Pharmacy Technician Course”</b> - <a href="http://acecr.ir/en">Academic Center for Education, Culture and Research</a></p>
           </div>
-          <!-- <div class="resume-date text-md-right"> -->
-          <!-- </div> -->
         </div>
 
         </div>
@@ -466,7 +462,7 @@
                           <div class="resume-item d-flex flex-column flex-md-row mb-1">
                               <div class="resume-content mr-auto text-align:justify; text-justify: inter-word; ">
                                   <span class="fa-li lead mb-0"><i class="fas fa-trophy text-warning"></i></span>
-                          <p class="lead mb-0">Contributor writer in 4<sup>th</sup>, 5<sup>th</sup> & 6<sup>th</sup> issues <b>“Biocan magazine at Union of Biology Students of Iran”</b>.</p>
+                          <p class="lead mb-0">Contributor writer in 4<sup>th</sup>, 5<sup>th</sup> & 6<sup>th</sup> issues <b>“Biocan magazine at Union of Biology Students of Iran”</b>.  <b>(<a href="https://drive.google.com/drive/folders/1LAg0xHYKP6O4m1Bptc4agt8KztDfXH1K?usp=drive_link">Magazine</a>)</b></p>
                               </div>
                               <div class="resume-date text-md-right">
                                 <span class="text-primary"><i class="far fa-calendar-alt"></i> Jan. 2020 - May 2023</span>
@@ -478,7 +474,7 @@
                         <div class="resume-item d-flex flex-column flex-md-row mb-1">
                             <div class="resume-content mr-auto text-align:justify; text-justify: inter-word; ">
                                 <span class="fa-li lead mb-0"><i class="fas fa-trophy text-warning"></i></span>
-                        <p class="lead mb-0">Contributor writer in 2<sup>nd</sup> & 3<sup>rd</sup> issues <b>“Genomics magazine at University of Science & Culture”</b>.</p>
+                        <p class="lead mb-0">Contributor writer in 2<sup>nd</sup> & 3<sup>rd</sup> issues <b>“Genomics magazine at University of Science & Culture”</b>.  <b>“Biocan magazine at Union of Biology Students of Iran”</b>.  <b>(<a href="https://drive.google.com/drive/folders/1N6xpk-E7x3RJPfPoeIYJIktJNPlWwhbX?usp=drive_link">Magazine</a>)</b></p>
                             </div>
                             <div class="resume-date text-md-right">
                               <span class="text-primary"><i class="far fa-calendar-alt"></i> Oct. 2019 - Jun. 2021</span>
@@ -504,10 +500,9 @@
 
     <!-- Certificate -->
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="certificate">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="certificate">
       <div class="my-auto">
         <h2><img src="assets/img/certificate-logo.png" alt="certificate" width="60" height="60" style="vertical-align:middle;margin-bottom:15px; margin-left: -25px;"><b> Presentation</b></h2>
-        <!-- <h2 class="mb-5">certificates</h2> -->
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
@@ -556,7 +551,7 @@
       </div>
     </section>
 
-    <hr class="m-0">
+    <hr class="m-0"> -->
 
             <!-- Interests-->
             <section class="resume-section" id="interests">
