--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards"><i class="fa fa-trophy"></i> Awards</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certificate"><i class="fas fa-certificate"></i> Presentation</a></li> -->
 
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"><i class="fas fa-map-marked-alt"></i> Interests</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests"><i class="fas fa-map-marked-alt"></i> Interests</a></li> -->
 
                 </ul>
             </div>
@@ -554,7 +554,7 @@
     <hr class="m-0"> -->
 
             <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <!-- <section class="resume-section" id="interests">
               <div class="resume-section-content">
                   <h2 class="mb-5">Interests</h2>
                   <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
@@ -563,7 +563,7 @@
           </section>
           <hr class="m-0" />
 
-        </div>
+        </div> -->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
