--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                        </p>
 
 
-                    <a href="/assets/file/Parham_ZM_CV.pdf">
+                    <!-- <a href="/assets/file/Parham_ZM_CV.pdf">
                         <i class="fa fa-download"></i><font size="4"><b> Download my CV here!</b></font></a>
-                     </br></br></br>
+                     </br></br></br> -->
                     
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/shaghayegh-m/" title="Linkedin"><i class="fab fa-linkedin-in" title="Linkedin"></i></a>
